# HujiOS

./: .gitignore  CMakeLists.txt
ex1/: Makefile  README  funcplaceholder.cpp  funcplaceholder.h  osm.cpp  osm.h  simpletest.cpp
ex2/: LinkedList.cpp  LinkedList.h  Makefile  README  Thread.cpp  Thread.h  demo_itimer.c  test2.cpp  tet.cpp  tet.h  uthreads.cpp  uthreads.h
ex3/: ExecMap.cpp  ExecMap.h  FileNameKey.cpp  FileNameKey.hpp  Logger.cpp  Logger.h  Makefile  MapReduceClient.h  MapReduceFramework.cpp  MapReduceFramework.h  README  Search.cpp  SearchMapReduce.cpp  SearchMapReduce.h
ex3/ex3/: FileNameKey.hpp  Makefile  MapReduceFramework.cpp  README
ex3/ex_3_test_suite/Framework/: MapReduceClient.h  MapReduceFramework.h
ex3/ex_3_test_suite/TestGuy/: PrimeTest.cpp
ex3/ex_3_test_suite/TestShahar/: test.cpp
ex3/ex_3_test_suite/Test_28/: WordFrequencies.cpp  WordFrequenciesClient.hpp
ex3/ex_3_test_suite/Test_6/: GridKeysValues.hpp  GridMapReduce.cpp  GridMapReduce.hpp  GridShamansFinder.cpp
ex4/: CacheFS.cpp  CacheFS.h  FbrAlgorithm.cpp  FbrAlgorithm.h  ICacheAlgorithm.hpp  LfuAlgorithm.cpp  LfuAlgorithm.h  LruAlgorithm.cpp  LruAlgorithm.h  Makefile  README  TestLFU.cpp
ex4/Tests/: RunTests  RunValgrind
ex4/Tests/TestFiles/: Test1.cpp  Test2.cpp  Test3.cpp  Test4.cpp  Test5.cpp
ex5/: Appeal  Makefile  NetworkHandler.cpp  NetworkHandler.h  README  Server.cpp  definitions.h  testclient.cpp  whatsappClient.cpp  whatsappServer.cpp
